# font-parser

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  export.cpp  export.h  parser.cpp  parser.h
src/fontview-src/: font_style.cpp  font_style.h  name_table.cpp  util.h
